fdo#58004: Apply source number format over one specified by the style.

Pivot table output applies several pre-defined styles, which also include
number formats.  But, the source number format, or one set by the pivot
table should take precedence over the one specified by the style, or else
it would lead to a very peculiar behavior.

This is especially the case when the documnet has its 'Default' style
specify a number format that's not 'General'.

Also, we should take all number formats into account, including the ones
that are 0.

Change-Id: Ifa794314a2881c5146e24eb7be892585a823048d